tests/sksl/errors/BadFieldAccess.glsl
### Compilation failed:

error: 3: type 'S' does not have a field named 'missing'
error: 4: not a function
error: 5: type mismatch: '=' cannot operate on 'float', 'bool3'
error: 6: invalid swizzle mask 'missing'
error: 7: expected array, but found 'float'
5 errors
